[2단계 - 블랙잭(베팅)] 오리(최진영) 미션 제출합니다. (#315)
* refactor: CardDeck 패키지 이동

* refactor: FirstHit 네이밍 수정

* refactor: firstPlayer 네이밍 수정

* feat: 복사 제거

* feat: 캐시된 카드 반환 메소드 네이밍 변경

* refactor: 도메인이 dto를 의존하지 않도록 변경

* docs: 요구사항 정리

* docs: 요구사항 추가

* feat: Running 생성 시 Cards가 null인 경우 예외처리 및 테스트

* feat: Running isFinished 기능 구현 및 테스트 추가

* feat: Running score 계산 시 예외처리 및 테스트 추가

* feat: Running에서 hit할 경우 Bust면 Bust 상태 반환 구현 및 테스트

* feat: Running에서 hit할 경우 Bust가 아니면 Running 상태 반환 구현 및 테스트

* feat: AbstractBlackjackGameState 공통 부분 통합

* feat: default 접근자 제거 및 addCard 메소드 추가

* feat: Running에서 stand 변경 메소드 추가 및 테스트

* feat: Running에서 stand 변경 메소드 추가 및 테스트

* feat: Stand상태에서 hit을 쓸 경우 예외처리 및 테스트

* feat: Stand상태에서 stand를 쓸 경우 예외처리 및 테스트

* feat: Stand의 종료상태 반환기능 구현 및 테스트

* feat: Stand의 스코어 계산기능 구현 및 테스트

* feat: Bust Finished 상속

* reset: 구현 재시작

* docs: 요구사항 생성

* feat: 플레이어의 이름이 null인 경우 예외처리 및 테스트

* feat: 플레이어의 이름이 공백인 경우 예외처리 및 테스트

* feat: 배팅금액 0이하인 경우 예외처리 및 테스트

* feat: 카드 패턴 enum 추가

* feat: 카드 패턴 이름 값 추가

* feat: 카드 숫자 enum 추가

* docs: 계산관련 요구사항 추가

* feat: 숫자 합 버스트 가능 여부 구현 및 테스트

* feat: 가장 베스트 수의 합 계산기능 구현 및 테스트

* feat: 가장 큰 수의 합 계산 기능 구현 및 테스트

* docs: 요구사항 수정

* test: final 수정

* feat: 카드 52개 생성기능 구현 및 테스트

* feat: 중복되지 않은 52장 카드덱 생성기능 구혀 및 테스트

* refactor: 메소드분리 및 상수 추가

* feat: carddeck 자료구조 변경

* feat: 랜덤 카드덱 생성 구현 및 테스트

* feat: 빈 카드덱에서 카드 제공 시 예외처리 및 테스트

* test: 카드제공 테스트 추가

* docs: 기능 리스트 수정

* feat: 캐싱된 카드에서 반환 기능 구현 및 테스트

* feat: 카드 계산과정 input 타입 변경

* feat: Running 생성 시 null 입력 예외처리 및 테스트

* feat: Cards 생성 시 null 입력 예외처리 및 테스트

* feat: Cards 자료구조 변경 및 2미만인 경우 예외처리 구현 테스트

* refactor: 카드 생성제한 사이즈 상수화

* refactor: Denomination 카드 자료구조 변경

* feat: 버스트 확인 기능 구현 및 테스트

* feat: 블랙잭 확인 기능 구현 및 테스트

* feat: 매직넘버 상수화

* fix: score 계산 시 자료구조 에러 수정

* feat: Running상태 Bust카드입력 예외처리 및 테스트

* feat: Running상태 종료여부 기능 구현 및 테스트

* feat: Running상태 수익